# NLP-platform

./: .gitignore  Finel_NLP.py  README.md  pyproject.toml  report.html  requirements.txt
.ipynb_checkpoints/: NLP-checkpoint.ipynb
assets/: slang_words.txt
src/nlp_utils/: __init__.py
src/nlp_utils/embedding/: pretrained_models.py
src/nlp_utils/ml/: pretrained_models.py
src/nlp_utils/preprocessing/: __init__.py  cleaner_helper.py  text_preprocessing.py
tests/test_unit/nlp_utils/test_preprocessing/: __init__.py  _synthetic_dbs.py  test_text_preprocessing.py
